# awto-mcp-debug-embedded

./: .gitignore  README.md  cpu_registry.py  cpus.json  debug_workflow.py  debugger_cube.py  debugger_esp.py  debugger_stlink.py  gdb_client.py  mcp_server.py  probe_detect.py  process_manager.py  pyproject.toml  stm32_ops.py  test_harness.py  tmp-do-not-keep.txt  ttu_cli.py
awto_debug/: __init__.py  gdb_server.py  log.py  otp.py  preflight.py  probe_selector.py  process_utils.py  programmer.py  stm32_db.py  usb.py
awto_debug/scripts/: install-udev-rules.sh
awto_debug/udev/: 60-awto-stlink.rules
scripts/: dev-setup.sh  restart-mcp.sh  test-chip-info.py
