[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awto-mcp-debug-embedded"
version = "0.1.0"
description = "MCP server for embedded debuggers — ST-Link, STM32CubeProgrammer, Espressif ESP-IDF, GDB/MI client"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "awto-au" }]
keywords = ["stlink", "stm32", "esp32", "gdb", "mcp", "embedded", "debug", "openocd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Software Development :: Embedded Systems",
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]",
    "pyusb>=1.2",
    "pyserial>=3.5",
    "colorlog",
]

[project.scripts]
awto-debug-embedded = "mcp_server:main"
awto-debug-cli      = "ttu_cli:main"

[tool.hatch.build.targets.wheel]
sources = ["."]
include = [
    "mcp_server.py",
    "ttu_cli.py",
    "probe_detect.py",
    "process_manager.py",
    "debugger_stlink.py",
    "debugger_cube.py",
    "debugger_esp.py",
    "gdb_client.py",
]

[dependency-groups]
dev = ["pytest"]

[tool.uv]
python = "3.14t"
